# plantswap

./: .editorconfig  .env  .gitignore  Cargo.toml  Database.md  Dockerfile  README.md  bacon.toml  diesel.toml  docker-compose.yml  realm-export.json
.github/workflows/: backend_check.yml  build_backend_container.yml  build_container.yml  check.yml
assets/: styles.css
backend/: .dockerignore  .env  .env.prod  Cargo.toml  bacon.toml  build.rs
backend/.config/: nextest.toml
backend/api/: bruno.json
backend/api/environments/: local dev.bru
backend/api/plantnet.org/: Identify Plant.bru  List Species.bru
backend/migrations/2024-09-01-151319_create_listings/: down.sql  up.sql
backend/src/: auth.rs  backend.rs  config.rs  frontend.rs  main.rs  models.rs  rest.rs  schema.rs
backend/src/backend/: recognition.rs
backend/src/rest/: listings.rs  pictures.rs  plants.rs
backend/templates/: login_button.html
backend/templates/pages/: 404.html  about.html  components.html  create_listing.html  show_listing.html
frontend/: README.md  settings.gradle.kts
frontend/.fleet/: receipt.json
frontend/composeApp/: build.gradle.kts
frontend/composeApp/src/androidMain/: AndroidManifest.xml
frontend/composeApp/src/androidMain/kotlin/app/plantswap/frontend/: MainActivity.kt  Platform.android.kt
frontend/composeApp/src/androidMain/res/values/: strings.xml
frontend/composeApp/src/commonMain/kotlin/app/plantswap/frontend/: App.kt  CreateListingScreen.kt  Model.kt  MultiImageCapturer.kt  Platform.kt
frontend/composeApp/src/iosMain/kotlin/app/plantswap/frontend/: MainViewController.kt  Platform.ios.kt
frontend/composeApp/src/wasmJsMain/kotlin/app/plantswap/frontend/: Platform.wasmJs.kt  main.kt
frontend/composeApp/src/wasmJsMain/resources/: index.html
frontend/gradle/: libs.versions.toml
frontend/iosApp/Configuration/: Config.xcconfig
frontend/iosApp/iosApp.xcodeproj/: project.pbxproj
migrations/2024-09-01-151319_create_listings/: down.sql  up.sql
migrations/2024-09-04-103101_auth_sessions/: down.sql  up.sql
src/: auth.rs  backend.rs  config.rs  frontend.rs  full_schema.rs  main.rs  models.rs  schema.patch  schema.rs
src/frontend/: components.rs  templates.rs
templates/: base.html  page_selector.html
templates/pages/: create_listing.html  discover.html  home.html
