[package]
name = "plant-swap"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-s3 = "1.47.0"
axum = { version = "0.7.5", features = ["http2", "macros", "multipart"] }
axum-htmx = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.3", features = ["chrono", "postgres", "uuid"] }
dotenvy = "0.15.7"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.0", features = ["tracing", "util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "v7"] }
